--- a/css/styles.css
+++ b/css/styles.css
@@ -86,10 +86,11 @@ body{
 
 .block-main__storage{
     border-radius: 12px;
+    position: relative;
 }
 
 .block-main__description-storage{
-    color: hsla(0, 100%, 100%, 0.7);
+    color: var(--pale-blue);/*hsla(0, 100%, 100%, 0.7);*/
     font-weight: 400;
     text-align: center;
     margin-bottom: 15px;
@@ -100,16 +101,142 @@ body{
     font-weight: 700;
 }
 
-/*special*/
-.block-main__current-qtd-storage{
-    display: none;
-}
-
-.block-main__range-storage::before{
+.block-main__range-storage{
     content: "";
-    display: block;
+    display: flex;
     width: 100%;
-    height: 20px;
+    /*height: 18px;*/
     background-color: var(--very-dark-blue);
     border-radius: 15px;
+    align-items: center;
+    padding: 3px;
+    margin-bottom: 10px;
 }
+
+.block-main__color-range{
+    content: "";
+    align-self: center;
+    display: flex;
+    width: 180px;
+    /*height: 13px;*/
+    background-image: linear-gradient(105deg, var(--color-gradient-from) 9%, var(--color-gradient-to) 96%);
+    border-radius: 15px;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 2px;
+}
+
+.block-main__control-range{
+    content: "";
+    display: block;
+    width: 10px;
+    height: 10px;
+    background-color: white;
+    border-radius: 50%;
+}
+
+.block-main__inf-qtd-storage{
+    font-size: 12px;
+    color: var(--pale-blue);/*hsla(0, 100%, 100%, 0.7);*/
+    font-weight: 700;
+}
+
+.block-main__inf-qtd-storage span{
+    display: inline-block;
+    width: 49%;
+}
+
+.block-main__start-qtd-storage{
+    text-align: left;
+}
+
+.block-main__end-qtd-storage{
+    text-align: right;
+}
+
+.block-main__current-qtd-storage{
+    background-color: white;
+    text-align: center;
+    padding: 12px;
+    width: 170px;
+    border-radius: 10px;
+    position: absolute;
+    top: 130px;
+    left: 80px;
+}
+
+.block-main__current-storage{
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: rgba(0, 0, 0, 1);
+    vertical-align: middle;
+    margin-right: 5px;
+}
+
+.block-main__unity-storage{
+    font-size: 12px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: var(--grayish-blue);
+    letter-spacing: 1px;
+}
+
+/*breakpoint 267px*/
+
+@media screen and (max-width: 267px) {
+    .block-main__options,
+    .block-main__storage{
+        padding: 20px;
+    }
+
+    .block-main__current-qtd-storage{
+        position: static;
+        margin: 20px auto;
+    }
+}
+
+/*breakpoint 668px*/
+@media screen and (min-width: 668px) {
+    body{
+        background-image: url(../images/bg-desktop.png);
+        background-repeat: no-repeat;
+        background-size: auto;
+        background-position: center bottom;
+    }
+}
+
+/*breakpoint 1000px*/
+@media screen and (min-width: 1000px) {
+    .block-main{
+        grid-template-columns: minmax(min-content, 330px) minmax(min-content, 530px);
+        align-items: flex-end;
+        column-gap: 20px;
+    }
+
+    .block-main__current-qtd-storage{
+        position: absolute;
+        top: -45px;
+        left: 320px;
+        border-radius: 15px 15px 0 15px;
+    }
+
+    .block-main__description-storage{
+        text-align: left;
+    }
+
+    .block-main__color-range{
+        width: 75%;
+    }
+
+    .block-main__current-qtd-storage::after{
+        content: "";
+        display: block;
+        width: 30px; /*30px*/
+        height: 25px; /*25px*/
+        position: absolute;
+        top: 69px;
+        left: 140px;
+        background-color: white;
+    }
+}
+
